--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Rubik: 300, 408, 500, 600 ;
 :root{
     --primary-color:#ff6b6b;
     --secondary-color: #794afa;
-    --secondary-dark-color: D#453c5c;
+    --secondary-dark-color: #453c5c;
     --white-color: #ffffff;
     --light-bq-color: #f2f3f5;
     --light-text-color:#7c899a;
@@ -19,7 +19,7 @@ Rubik: 300, 408, 500, 600 ;
     --percent100: 100%;
     --percent50: 50%;
     --fw3: 300;
-
+    --fw5: 500;
     --fw6: 600;
     --fw7: 700;
     --fw8: 800;
@@ -132,7 +132,7 @@ h4{
 }
 .icon-small{
     font-size: 1.25em;
-    margin:auto;
+    margin-left:auto;
 }
 .icon-large{
     font-size: 1.75em;
@@ -144,8 +144,65 @@ h4{
 .mobile-hide{
     display: none;
 }
+.object-cover img{
+    position: absolute;
+    object-fit: cover;
+    width:var(--percent100) ;
+    height: var(--percent100);
+    display: block;
 
+}
+.products .media {
+    position: relative;
+    flex-shrink: 0;
+    overflow: hidden;
+}
+.primary-button, .secondary-button, .light-button{
+    font-size: var(--font-small);
+    padding: 0.9em 2em;
+    height: auto;
+    width: fit-content;
+    border-radius: 2em;
+    transform: var(--trans-background-color);
 
+}
+.primary-button{
+    background-color: var(--dark-color);
+    color: var(--white-color);
+
+}
+.primary-button:hover{
+    background-color: var(--dark-color);
+
+}
+.secondary-button{
+    background-color: var(--secondary-dark-color);
+    color: var(--white-color);
+}
+.secondary-button:hover{
+    background-color: var(--light-bq-color);
+    color: var(--secondary-dark-color);
+}
+.light-button{
+    background-color: var(--light-bq-color);
+
+}
+
+.light-button:hover{
+    background-color: var(--secondary-dark-color);
+    color:var(--white-color)
+}
+
+.view-all{
+    font-size: var(--font-small);
+    display: flex;
+    gap: 1em;
+    transition: var(--trans-color);
+}
+.mini-text{
+    font-size: var(--font-smaller);
+    color: var(--light-text-color);
+}
 
 
 
@@ -291,6 +348,50 @@ nav .fly-item{
     border: var(--percent50);
 }
 
+.mega .flexcol{
+    flex:1;
+    min-width:180px;
+    padding-right: 2.5em;
+    margin-bottom: 1.5em;
+    z-index: 1;
+}
+
+/*CATEGORIES*/
+.header-main{
+    background-color: var(--secondary-dark-color);
+    padding: 1.5em 0;
+    margin-bottom: 2em;
+
+}
+.dpt-cat{
+    position: relative;
+    z-index: 10;
+}
+.dpt-cat .dpt-head{
+    position: relative;
+    width: 300px;
+    padding: 0.75em 1.5em;
+    background-color: var(--primary-color);
+    border-radius: 7px 7px 0 0 ;
+    color: var(--white-color);
+    margin-bottom: -2.15em;
+}
+.dpt-cat .dpr-head .mini-text{
+    color: var(--light-bq-color);
+}
+.dpt-cat .dpt-trigger{
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 1.3em;
+    height: 60px;
+    width: 60px;
+}
+.dpt-menu > ul > li > a{
+    font-size: var(--font-small);
+    height: 46px;
+    align-items: center;
+}
 
 
 
@@ -298,26 +399,55 @@ nav .fly-item{
 
 
 
+/*SEARCH FORM*/
+.header-main .right{
+    flex:1;
+
+}
+form{
+    position: relative;
+}
 
 
+form.search input{
+    line-height: 3.25em;
+    padding: 0 7em 0 4.5em;
+    border: 0;
+    outline: 0;
+    width: var(--percent100);
+    border-radius: 7px;
+    font-size: 0.9em;
+    font-weight: var(--fw3);
+}
+
+form.search :where(span,button){
+    position: absolute;
+    top: 0;
+    padding: 0.55em 1.5em;
+    font-size: 1em;
+    color: var(--light-text-color);
+    height: var(--percent100);
+}
 
 
+form.search button{
+    right: 0;
+    outline: 0;
+    font-size: 0.875em;
+    font-weight: var(--fw6);
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    border-radius: 0 7px 7px 0;
+    cursor: pointer;
+    transition: var(--trans-background);
+
+}
+form.search button:hover{
+    background-color: var(--dark-color);
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @media screen and (min-width:992px){
+@media screen and (min-width:992px){
         .container{
             padding: 0 2em;
         }
@@ -339,4 +469,123 @@ nav .fly-item{
             margin-left: 1em;
 
         }
+        /*mega menu*/
+        nav .mega{
+            position: absolute;
+            width: var(--percent100);
+            height: auto;
+            top: auto;
+            left: 0;
+            right: 0;
+            padding:2.5em;
+            line-height: 2em;
+            background-color: var(--light-bq-color);
+            box-shadow: rgb(0 0 0 / 20%) 0 30px 20px -30px;
+            z-index: 100;
+            display: none;
+        }
+        nav li.has-child:hover .mega{
+            display: block;
+        }
+
+
+
+
+        nav .mega .wrapper{
+            display: flex;
+
+        }
+        nav .mega h4{
+            font-size: 0.8em;
+            text-transform: uppercase;
+        }
+        nav .mega ul{
+            font-size: var(--font-small);
+        }
+        nav .mega .women-brands{
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 180px;
+
+        }
+        nav .mega .women-brands li{
+            min-width:80px;
+        }
+        nav .mega .view-all{
+            margin-top:1em;
+        }
+        nav .mega .products{
+            flex:2;
+            padding: 0;
+            align-items: center;
+            position: relative;
+
+        }
+        nav .mega .products .row{
+            width: var(--percent100);
+        }
+        nav .mega .products .media{
+            height: 400px;
+        }
+        nav .mega .products .text-content{
+            line-height: initial;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5em;
+            margin-top: 0.5em;
+            position: absolute;
+            bottom:4em ;
+            width: var(--percent100);
+        }
+        nav .mega .products .text-content h4{
+            font-size: 2em;
+            font-weight: var(--fw8);
+            text-align: center;
+            color: var(--secondary-dark-color);
+
+        }
+        .header-main .right{
+            max-width: 600px;
+            margin-left: auto;
+        }
+        .dpt-menu{
+            position:absolute;
+            top:var(--percent100);
+            background-color: var(--white-color);
+            border: 1px solid var(--border-color);
+            border-top: 0;
+            border-bottom: 0;
+        }
+        .dpt-menu > ul > li > a{
+            font-weight: var(--fw5);
+            padding: 0 1.5em;
+            border-bottom: 1px solid var(--border-color);
+        }
+        .dpt-menu .has-child > ul, .dpt-menu .mega{
+            position: absolute;
+            top:0;
+            left: var(--percent100);
+            width: var(--percent100);
+            height: auto;
+            padding: 1.5em;
+            min-height: var(--percent100);
+            font-size: var(--font-small);
+            line-height: 2.5em;
+            border: 1px solid var(--border-color);
+            border-top: 0;
+            display: none;
+            background-position: right bottom;
+            background-repeat: no-repeat;
+            background-size:auto ;
+        }
+        .dpt-menu .mega{
+            display: block;
+        }
+        .dpt-menu .has-child:hover .mega{
+            
+        }
+       
+
+
     }
