--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ h4{
 
 
 /*--------HEADER-------*/
-header li > a {
+:where(.off-canvas, header) li > a {
     display: flex;
     position: relative;
     line-height: inherit;
@@ -243,10 +243,10 @@ header li > a {
     z-index: 1;
 
 }
-.header-top .right ul ul li a{
+:where(.header-top, .thetop-nav).right ul ul li a{
     padding: 0.25em 1em;
 }
-.header-top .right ul ul li.current a {
+:where(.header-top, .thetop-nav) .right ul ul li.current a {
     background-color: var(--border-color);
 }
 .header-top li:hover ul{
@@ -450,6 +450,168 @@ form.search button{
 form.search button:hover{
     background-color: var(--dark-color);
 }
+
+.site-off{
+    position: fixed;
+    width:320px;
+    height: var(--percent100);
+    background-color: var(--white-color);
+    overflow-y:auto;
+    z-index: 1000;
+    transform: translateX(-100%); 
+    visibility: hidden;
+    transition: transform .4s, visibility .4s;
+    will-change: transform , visibility;
+    
+}
+.showmenu .site-off{
+    transform: translateX(0);
+    visibility: visible;
+    transform: transform .4s 0s , visibility 0s 0s;;
+
+   
+}
+.off-canvas{
+    width: var(--percent100);
+    height: var(--percent100); 
+    touch-action: auto;
+    padding: 1.5em;
+
+}
+
+.off-canvas .canvas-head{
+    color: var(--white-color);
+    justify-content: space-between;
+    padding: 1.5em;
+    margin: -1.5em -1.5em 1.5em ;
+    background-color: var(--secondary-dark-color);
+    border-bottom-right-radius: 160px 25px;
+}
+.off-canvas .canvas-head .logo{
+    z-index: 10;
+    position: relative;
+}
+.off-canvas .canvas-head .logo .circle{
+    opacity: .75;
+
+}
+.t-close{
+    font-size:1.25em;
+    width:32px;
+    height: 32px;
+    border-radius: var(--percent50);
+    background-color:var(--secondary-dark-color) ;
+    color: var(--white-color);
+    transition: var(--trans-background-color);
+
+}
+.t-close:hover{
+    background-color: var(--white-color);
+    color: var(--secondary-dark-color);
+    opacity: .75;
+
+}
+.off-canvas .dpt-head{
+    font-size: var(--font-small);
+    padding: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+    background-color: var(--light-bq-color);
+    border-radius: 7px 7px 0 0;
+}
+.off-canvas .has-child > :where(ul,.mega){
+    font-size: var(--font-small);
+    font-weight: var(--fw3);
+    line-height: 28px;
+    padding-left: 3em;
+    height: auto;
+    max-height: 0;
+    overflow: hidden; 
+    transition: max-height .3s cubic-bezier(0.215, 0.610, 0.355, 1);
+} 
+.off-canvas .expand > :where(ul, .meaga){
+    max-height: 2000px;
+}
+.off-canvas .thetop-nav ul , .off-canvas nav > ul{
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: var(--font-small);
+    line-height: 36px;
+    padding-top: 1.25em;
+    margin: 1.25em 0;
+    border-top: 1px solid var(--border-color);
+}
+.off-canvas nav .mega{
+    padding:0;
+}
+
+.off-canvas nav .mega .products{
+    display: none;
+}
+.off-canvas .has-child .icon-small{
+    padding: 0.5em;
+    line-height: initial;
+}
+.off-canvas .dpt-menu .icon-small i {
+    transform: rotate(90deg);
+}
+
+
+.off-canvas .has-child{
+    width: var(--percent100);
+}
+.off-canvas .thetop-nav .right > ul > :where(:nth-child(4), li:nth-child(5))> a {
+    display: none;
+}
+.off-canvas .thetop-nav .right ul ul{
+    display: flex;
+    flex-direction: row;
+}
+.off-canvas .thetop-nav .right ul ul li a {
+    padding: 0.5em;
+    border: 1px solid var(--border-color);
+    line-height: 16px;
+    margin: 0 0.5em 0.5em 0;
+}
+/*SLIDER*/
+.slider > div >.wrapper{
+    width: calc(100% -(300px + 2em));
+    margin-left: auto;
+}
+.slider .item{
+    position: relative;
+    height: 474px;
+}
+.slider .text-content{
+    position: relative;
+    height: var(--percent100);
+    justify-content: flex-end;
+    padding:0 0 10% 10% ;
+    z-index: 1;
+}
+.slider h4{
+    font-size: var(--font-small);
+    font-weight: var(--fw7);
+    width: fit-content;
+    padding: 4px 10px;
+    background-color: var(--dark-color);
+    color: var(--white-color);
+    border-radius: h4;
+}
+.text-content :where(h2,h3) span:first-child{
+    font-weight: var(--fw3);
+    columns: var(--light-text-color);
+}
+.text-content :where(h2,h3) span:last-child{
+    color: var(--secondary-dark-color);
+    text-transform: uppercase;
+    letter-spacing: -1px;
+
+}
+
+
+
+
 
 
 @media screen and (min-width:992px){
